--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body bgcolor="#000000">
 <table width="950" height="100%" border="0" align="center" cellpadding="5" cellspacing="0">
   <tr valign="top"> 
-    <td width="222" height="40" class="nom"><a href="index.html">St&eacute;phanie 
-      Morissette</a></td>
-    <td width="238" height="40" align="center" class="unnamed1">&nbsp;</td>
-    <td width="147" height="40" align="left" class="unnamed1"><a href="pages/index.html">english</a></td>
+    <td width="322" height="40" class="nom"><a href="index.html">St&eacute;phanie Morissette</a></td> 
+    <td   height="40" align="left" class="unnamed1">
+		<a href="https://stephaniemorissette.wordpress.com">blog(bilingual)</a></td>
+    <td  height="40" align="left" class="unnamed1"><a href="pages/index.html">english</a></td>
     <td width="313" align="left" class="unnamed1"><a href="pages/index_fr.html">fran&ccedil;ais</a></td>
   </tr>
   <tr align="center" valign="top"> 
