--- a/pages/2002_2005/fr/2002_2005_01.htm
+++ b/pages/2002_2005/fr/2002_2005_01.htm
@@ -87,8 +87,8 @@ MM_reloadPage(true);
       2005.</em> Toutes les oeuvres pr&eacute;sent&eacute;es sont la propri&eacute;t&eacute; 
       de St&eacute;phanie Morissette sauf indication contraire. <br>
       Aucun &eacute;l&eacute;ment de ce site Web ne peut &ecirc;tre reproduit 
-      sans autorisation &eacute;crite. Aucun élément de ce site Web ne peut être 
-      reproduit sans autorisation écrite.</em></td>
+      sans autorisation &eacute;crite. Aucun &eacute;l&eacute;ment de ce site Web ne peut &ecirc;tre 
+      reproduit sans autorisation &eacute;crite.</em></td>
   </tr>
 </table>
 <p>&nbsp;</p>
