--- a/pages/2002_2005/fr/2002_2005_08.htm
+++ b/pages/2002_2005/fr/2002_2005_08.htm
@@ -83,7 +83,7 @@ MM_reloadPage(true);
         Morissette sauf indication contraire. <br>
         Aucun &eacute;l&eacute;ment de ce site Web ne peut &ecirc;tre reproduit 
         sans autorisation &eacute;crite.
-Aucun élément de ce site Web ne peut être reproduit sans autorisation écrite.</em></td>
+Aucun &eacute;l&eacute;ment de ce site Web ne peut &ecirc;tre reproduit sans autorisation &eacute;crite.</em></td>
   </tr>
 </table>
 <p>&nbsp;</p>
