--- a/pages/2006_2010/fr/page_09.htm
+++ b/pages/2006_2010/fr/page_09.htm
@@ -36,7 +36,7 @@ MM_reloadPage(true);
     <td colspan="8"><table width="425" border="0" align="center" cellpadding="5" cellspacing="0">
         <tr> 
           <td valign="middle">&nbsp; </td>
-          <td width="293" height="30" align="left" class="nom">Dessins - Série 
+          <td width="293" height="30" align="left" class="nom">Dessins - S&eacute;rie 
             2006-2010</td>
         </tr>
         <tr> 
@@ -90,7 +90,7 @@ MM_reloadPage(true);
         Morissette sauf indication contraire. <br>
         Aucun &eacute;l&eacute;ment de ce site Web ne peut &ecirc;tre reproduit 
         sans autorisation &eacute;crite.
-Aucun élément de ce site Web ne peut être reproduit sans autorisation écrite.</em></em></td>
+Aucun &eacute;l&eacute;ment de ce site Web ne peut &ecirc;tre reproduit sans autorisation &eacute;crite.</em></em></td>
   </tr>
 </table>
 <p>&nbsp;</p>
