--- a/pages/2006_2010/fr/page_13.html
+++ b/pages/2006_2010/fr/page_13.html
@@ -36,7 +36,7 @@ MM_reloadPage(true);
     <td colspan="8"><table width="425" border="0" align="center" cellpadding="5" cellspacing="0">
         <tr> 
           <td valign="middle">&nbsp; </td>
-          <td width="293" height="30" align="left" class="nom">Dessins - Série 
+          <td width="293" height="30" align="left" class="nom">Dessins - S&eacute;rie 
             2006-2010</td>
         </tr>
         <tr> 
@@ -76,7 +76,7 @@ MM_reloadPage(true);
           <td>&nbsp;</td>
           <td align="left" class="txtpf"><strong><span class="unnamed1">Military 
             Operations, 2006</span></strong><br>
-            Ink on paper, 41 x 30 cm. Série of military operation names written 
+            Ink on paper, 41 x 30 cm. S&eacute;rie of military operation names written 
             around actors and victims of those actions.<br></td>
         </tr>
       </table></td>
@@ -90,7 +90,7 @@ MM_reloadPage(true);
         Morissette sauf indication contraire. <br>
         Aucun &eacute;l&eacute;ment de ce site Web ne peut &ecirc;tre reproduit 
         sans autorisation &eacute;crite.
-Aucun élément de ce site Web ne peut être reproduit sans autorisation écrite.</em></em></td>
+Aucun &eacute;l&eacute;ment de ce site Web ne peut &ecirc;tre reproduit sans autorisation &eacute;crite.</em></em></td>
   </tr>
 </table>
 <p>&nbsp;</p>
