--- a/pages/2008_2009_old/fr/2008-2009_03.htm
+++ b/pages/2008_2009_old/fr/2008-2009_03.htm
@@ -36,7 +36,7 @@ MM_reloadPage(true);
     <td colspan="8"><table width="425" border="0" align="center" cellpadding="5" cellspacing="0">
         <tr> 
           <td valign="middle">&nbsp; </td>
-          <td width="293" height="30" align="left" class="nom">Dessins - Série 2008-2010 </td>
+          <td width="293" height="30" align="left" class="nom">Dessins - S&eacute;rie 2008-2010 </td>
         </tr>
         <tr> 
           <td valign="middle"><table width="50" border="0" cellspacing="4" cellpadding="0">
@@ -86,7 +86,7 @@ MM_reloadPage(true);
         Morissette sauf indication contraire. <br>
         Aucun &eacute;l&eacute;ment de ce site Web ne peut &ecirc;tre reproduit 
         sans autorisation &eacute;crite.
-Aucun élément de ce site Web ne peut être reproduit sans autorisation écrite.</em></em></td>
+Aucun &eacute;l&eacute;ment de ce site Web ne peut &ecirc;tre reproduit sans autorisation &eacute;crite.</em></em></td>
   </tr>
 </table>
 <p>&nbsp;</p>
