--- a/pages/videos/fr/videos_01.htm
+++ b/pages/videos/fr/videos_01.htm
@@ -55,7 +55,10 @@
                 <td>&nbsp;</td>
               </tr>
             </table></td>
-          <td align="right"> <img src="../video_soon.gif" width="400" height="326"></td>
+          <td align="right"> 
+		  <iframe src="https://player.vimeo.com/video/75885688" width="500" height="284" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+		  <p></p>
+		  </td>
         </tr>
         <tr> 
           <td>&nbsp;</td>
