--- a/pages/videos/fr/videos_03.htm
+++ b/pages/videos/fr/videos_03.htm
@@ -55,7 +55,7 @@
                 <td>&nbsp;</td>
               </tr>
             </table></td>
-          <td valign="top"> <img src="../video_soon.gif" width="400" height="326"></td>
+          <td valign="top"> 			  <iframe src="https://player.vimeo.com/video/75865773" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></td>
         </tr>
         <tr> 
           <td>&nbsp;</td>
