--- a/pages/videos/fr/videos_04.htm
+++ b/pages/videos/fr/videos_04.htm
@@ -56,11 +56,11 @@
                 <td>&nbsp;</td>
               </tr>
             </table></td>
-          <td align="right" valign="top"> <object width="560" height="340">
-              <param name="movie" value="http://www.youtube.com/v/6iz75Maf618&hl=fr&fs=1&">
-              <param name="allowFullScreen" value="true">
-              <param name="allowscriptaccess" value="always">
-              <embed class=" __noscriptOpaqued__ __noscriptObjectPatchMe__" style="width: 400px; height: 326px;" id="VideoPlayback" type="application/x-shockwave-flash" src="http://video.google.com/googleplayer.swf?docId=213246983952917764&amp;hl=en-GB" flashvars="" > </td>
+          <td align="right" valign="top"> 
+		  
+		  			  <iframe src="https://player.vimeo.com/video/48208757" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+		  
+		   </td>
         </tr>
         <tr> 
           <td>&nbsp;</td>
