--- a/pages/videos/fr/videos_04.htm
+++ b/pages/videos/fr/videos_04.htm
@@ -49,11 +49,11 @@
               </tr>
               <tr> 
                 <td class="txtpf">Empty?</td>
-                <td class="txtpf">&nbsp;</td>
+                <td class="txtpf">NightShot</td>
               </tr>
               <tr> 
                 <td><a href="videos_05.htm"><img src="../Videos_05.jpg" width="100" height="75" border="0"></a></td>
-                <td>&nbsp;</td>
+                <td><a href="videos_06.htm"><img src="../vimeo_nightshot.jpg" width="100" height="75" border="0"></a></td>
               </tr>
             </table></td>
           <td align="right" valign="top"> 
