--- a/pages/videos/fr/videos_03.htm
+++ b/pages/videos/fr/videos_03.htm
@@ -47,12 +47,12 @@
                 <td><a href="videos_04.htm"><img src="../Videos_04.jpg" width="100" height="75" border="0"></a></td>
               </tr>
               <tr> 
-                <td class="txtpf">Vide?</td>
-                <td class="txtpf">&nbsp;</td>
+                <td class="txtpf">Empty?</td>
+                <td class="txtpf">NightShot</td>
               </tr>
               <tr> 
                 <td><a href="videos_05.htm"><img src="../Videos_05.jpg" width="100" height="75" border="0"></a></td>
-                <td>&nbsp;</td>
+                <td><a href="videos_06.htm"><img src="../vimeo_nightshot.jpg" width="100" height="75" border="0"></a></td>
               </tr>
             </table></td>
           <td valign="top"> 			  <iframe src="https://player.vimeo.com/video/75865773" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></td>
